--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -496,4 +496,5 @@
     <string name="auth_failure_hint_regular_accounts">Failed to log-in, please, check your account name and password in the server settings.</string>
     <string name="connection_lost">Connection lost</string>
     <string name="loading_labels">Loading labels</string>
+    <string name="could_not_load_oauth_server_configuration">Couldn\'t load OAuth server configuration</string>
 </resources>
