Gmail API. Begun to work on errors handling.| #932

--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -133,7 +133,7 @@
     <string name="private_">Private</string>
     <string name="public_">Public</string>
     <string name="attachment">Attachment</string>
-    <string name="can_not_connect_to_the_imap_server">Cannot connect to the IMAP server</string>
+    <string name="can_not_connect_to_the_server">Cannot connect to the server</string>
     <string name="failed_load_message_from_email_server">Failed to load message from email server</string>
     <string name="cancel">Cancel</string>
     <string name="waiting_to_load">Waiting to load</string>
