--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -379,8 +379,7 @@
     <string name="your_email_address">Your email address</string>
     <string name="pending">Pending&#8230;</string>
     <string name="mark_unread">Mark unread</string>
-    <string name="user_not_verified">User not verified</string>
-    <string name="user_not_registered_not_verified">User not registered and not verified</string>
+    <string name="user_not_registered_or_verified">User is not registered or not verified</string>
     <string name="submitting_pub_key">Submitting the pub key</string>
     <string name="saving_prv_keys">Saving the private key(s)</string>
     <string name="key_already_imported_finishing_setup">Key already imported, finishing setup.</string>
