Renamed 'plane text' to 'plaintext'.| #1191

--- a/docker-mailserver/maildata_source/denbond7.com/default/mailboxes/Drafts/dbox-Mails/u.1
+++ b/docker-mailserver/maildata_source/denbond7.com/default/mailboxes/Drafts/dbox-Mails/u.1
@@ -5,7 +5,7 @@ X-Identity-Key: id3
 X-Account-Key: account16
 To: Denis Bondarenko <android@denbond7.com>
 From: Default <default@denbond7.com>
-Subject: Standard message - plane text
+Subject: Standard message - plaintext
 Message-ID: <6687977f-9bf3-c937-953e-5e6fc332ddf7@denbond7.com>
 Date: Mon, 5 Oct 2020 11:26:04 +0300
 X-Mozilla-Draft-Info: internal/draft; vcard=0; receipt=0; DSN=0; uuencode=0;
@@ -23,7 +23,7 @@ Content-Transfer-Encoding: 7bit
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   </head>
   <body>
-    <pre style="background-color:#ffffff;color:#000000;font-family:'DejaVu Sans Mono';font-size:12.0pt;">It's a standard message with plane text=20</pre>
+    <pre style="background-color:#ffffff;color:#000000;font-family:'DejaVu Sans Mono';font-size:12.0pt;">It's a standard message with plaintext=20</pre>
   </body>
 </html>
 
