--- a/docker-mailserver/maildata_source/denbond7.com/denbond7/mailboxes/Sent/dbox-Mails/u.2
+++ b/docker-mailserver/maildata_source/denbond7.com/denbond7/mailboxes/Sent/dbox-Mails/u.2
@@ -8,7 +8,7 @@ Date: Mon, 5 Oct 2020 11:32:34 +0300
 User-Agent: Mozilla/5.0 (X11; Linux x86_64; rv:68.0) Gecko/20100101
  Thunderbird/68.10.0
 MIME-Version: 1.0
-Subject: Standard message - plane text
+Subject: Standard message - plaintext
 Content-Type: multipart/alternative;
  boundary="------------D3F69D95534F587EC1BE35A3"
 Content-Language: en-US
@@ -18,7 +18,7 @@ This is a multi-part message in MIME format.
 Content-Type: text/plain; charset=utf-8
 Content-Transfer-Encoding: quoted-printable
 
-It's a standard message with plane text
+It's a standard message with plaintext
 
 
 --------------D3F69D95534F587EC1BE35A3
@@ -33,7 +33,7 @@ Content-Transfer-Encoding: quoted-printable
   </head>
   <body>
     <pre style=3D"background-color:#ffffff;color:#000000;font-family:'Dej=
-aVu Sans Mono';font-size:12.0pt;">It's a standard message with plane text=
+aVu Sans Mono';font-size:12.0pt;">It's a standard message with plaintext=
 </pre>
   </body>
 </html>
