--- a/docker-mailserver/maildata_source/denbond7.com/denbond7/mailboxes/Trash/dbox-Mails/u.1
+++ b/docker-mailserver/maildata_source/denbond7.com/denbond7/mailboxes/Trash/dbox-Mails/u.1
@@ -16,7 +16,7 @@ X-Pep-Version: 2.0
 Message-ID: <c1d70d8c-09f2-e029-27d8-b789de612422@denbond7.com>
 Date: Mon, 5 Oct 2020 11:28:22 +0300
 Mime-Version: 1.0
-Subject: Standard message - plane text
+Subject: Standard message - plaintext
 Content-Type: multipart/alternative;
  boundary="------------122DE5599D10BFBCB913B469"
 Content-Language: en-US
@@ -26,7 +26,7 @@ This is a multi-part message in MIME format.
 Content-Type: text/plain; charset=utf-8
 Content-Transfer-Encoding: quoted-printable
 
-It's a standard message with plane text
+It's a standard message with plaintext
 
 
 --------------122DE5599D10BFBCB913B469
@@ -41,7 +41,7 @@ Content-Transfer-Encoding: quoted-printable
   </head>
   <body>
     <pre style=3D"background-color:#ffffff;color:#000000;font-family:'Dej=
-aVu Sans Mono';font-size:12.0pt;">It's a standard message with plane text=
+aVu Sans Mono';font-size:12.0pt;">It's a standard message with plaintext=
 </pre>
   </body>
 </html>
