--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -496,4 +496,11 @@
     <string name="stored_pass_phrase_matched">Stored pass phrase: matched</string>
     <string name="stored_pass_phrase_mismatch">Stored pass phrase: mismatch</string>
     <string name="could_not_check_pass_phrase">Could not check the pass phrase</string>
+    <string name="details">Details</string>
+    <string name="reply_to">Reply To</string>
+    <string name="to">To</string>
+    <string name="cc">Cc</string>
+    <string name="date">Date</string>
+    <string name="to_receiver">To %1$s</string>
+    <string name="and_others">and others&#8230;</string>
 </resources>
