--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -318,7 +318,7 @@
     <string name="save_to_file">Save to file</string>
     <string name="show_private_key">Show private key</string>
     <string name="template_fingerprint" formatted="false"><![CDATA[Fingerprint: <font color=\'#B7B7B7\'>%1$s</font>]]></string>
-    <string name="template_longid">Longid: %1$s</string>
+    <string name="template_fingerprint_3">Fingerprint: %1$s</string>
     <string name="template_date">Date: %1$s</string>
     <string name="template_users">Users: %1$s</string>
     <string name="see_backups_to_save_your_private_keys">Not implemented yet, see \"Backups\" to save your private key to file</string>
@@ -371,7 +371,7 @@
     <string name="template_algorithm_bits">Bits: %1$s</string>
     <string name="template_curve">Curve: %1$s</string>
     <string name="template_user">User %1$d: %2$s</string>
-    <string name="template_long_id">LongID %1$d: %2$s</string>
+    <string name="template_fingerprint_2">Fingerprint %1$d: %2$s</string>
     <string name="public_key_copied_to_clipboard">Public Key copied to clipboard</string>
     <string name="email_must_be_non_empty">Email should not be empty</string>
     <string name="your_email_address">Your email address</string>
