--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -505,7 +505,7 @@
     <string name="forget_passphrase">Forget pass phrase</string>
     <string name="check_passphrase">Check pass phrase</string>
     <string name="your_passphrase">Your pass phrase</string>
-    <string name="passphrase_was_erased">The pass phrase was erased</string>
+    <string name="passphrase_purged_from_memory">Pass phrase purged from memory</string>
     <string name="no_details_about_given_key">There are no details about the given key</string>
     <string name="active_passphrase_session">Active pass phrase session</string>
 </resources>
