--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -337,9 +337,9 @@
     <string name="show_cc_bcc">Show CC/BCC</string>
     <string name="system">System</string>
     <string name="errors_notifications">Errors notifications</string>
-    <string name="system_notifications_notification_chanel">The system notifications channel</string>
-    <string name="errors_notifications_notification_chanel">The errors notifications channel with high priority</string>
-    <string name="sync_notifications_notification_chanel">The sync notifications channel</string>
+    <string name="system_notifications_notification_channel">The system notifications channel</string>
+    <string name="errors_notifications_notification_channel">The errors notifications channel with high priority</string>
+    <string name="sync_notifications_notification_channel">The sync notifications channel</string>
     <string name="warning_passphrase_is_too_weak">Your private key pass phrase is too weak. Please change it in the
         settings.</string>
     <string name="please_type_key_id_or_email">Please type key id or email</string>
@@ -508,4 +508,6 @@
     <string name="passphrase_purged_from_memory">Pass phrase purged from memory</string>
     <string name="no_details_about_given_key">There are no details about the given key</string>
     <string name="active_passphrase_session">Active pass phrase session</string>
+    <string name="silent">Silent</string>
+    <string name="silent_notifications_notification_channel">The silent notifications channel</string>
 </resources>
