--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -510,4 +510,8 @@
     <string name="active_passphrase_session">Active pass phrase session</string>
     <string name="silent">Silent</string>
     <string name="silent_notifications_notification_channel">The silent notifications channel</string>
+    <plurals name="please_provide_passphrase_for_following_keys">
+        <item quantity="one">Please provide a passphrase for the following key</item>
+        <item quantity="other">Please provide a passphrase for the following keys</item>
+    </plurals>
 </resources>
