--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -513,10 +513,6 @@
     <string name="passphrase_type_undefined">Pass phrase type is undefined</string>
     <plurals name="please_provide_passphrase_for_following_keys">
         <item quantity="one">Please provide a pass phrase for the following key</item>
-        <item quantity="other">Please provide a pass phrase for the following keys</item>
-    </plurals>
-    <plurals name="you_have_unlocked_keys">
-        <item quantity="one">You have unlocked one key. Please use a different pass phrase to unlock the remaining keys</item>
-        <item quantity="other">You have unlocked %1$d keys. Please use a different pass phrase to unlock the remaining keys</item>
+        <item quantity="other">Please provide a pass phrase for at least one of the following keys</item>
     </plurals>
 </resources>
