Issue #1251 pass in ram decrypt msg (#1282)
* Added some UI and logic. Refactored code.| #1251

* Modified a logic in FixEmptyPassphraseDialogFragment. Improved UI.| #1251

* Added logic to re-decrypt a message automatically when a user added a missed passphrase.| #1251

* Improved logic and UI.| #1251

* Cahnged logic in FixNeedPassphraseIssueDialogFragment to ask a passphrase for the given keys only (filtered by a fingerprint). Refactored code.| #1251

* Added handling some errors.| #1251

* Improved CheckPrivateKeysViewModel.| #1251

* Added an action button to the error layout.| #1251

* flowcrypt-email-server:0.0.3| #1251

* Added tests.| #1251

* Added using 'keyCacheWipe' endpoint. Fixed tests.| #1251

--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -510,4 +510,9 @@
     <string name="active_passphrase_session">Active pass phrase session</string>
     <string name="silent">Silent</string>
     <string name="silent_notifications_notification_channel">The silent notifications channel</string>
+    <string name="passphrase_type_undefined">Pass phrase type is undefined</string>
+    <plurals name="please_provide_passphrase_for_following_keys">
+        <item quantity="one">Please provide a pass phrase for the following key</item>
+        <item quantity="other">Please provide a pass phrase for at least one of the following keys</item>
+    </plurals>
 </resources>
