--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -516,4 +516,5 @@
         <item quantity="one">Please provide a pass phrase for the following key</item>
         <item quantity="other">Please provide a pass phrase for at least one of the following keys</item>
     </plurals>
+    <string name="combination_of_org_rules_is_not_supported">Combination of the following OrgRules\n\n%1$s\n\nis not supported</string>
 </resources>
