--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -521,4 +521,5 @@
     <string name="passphrase_was_changed">Your pass phrase was changed. From now, the new backups will be protected with a provided pass phrase.</string>
     <string name="processing_please_wait">Processing, please wait&#8230;</string>
     <string name="could_not_change_pass_phrase">Could not change the pass phrase</string>
+    <string name="no_prv_keys_ask_admin">There are no private keys configured for you. Please ask your systems administrator or help desk</string>
 </resources>
