--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -522,4 +522,6 @@
     <string name="processing_please_wait">Processing, please wait&#8230;</string>
     <string name="could_not_change_pass_phrase">Could not change the pass phrase</string>
     <string name="no_prv_keys_ask_admin">There are no private keys configured for you. Please ask your systems administrator or help desk</string>
+    <string name="please_login_again_to_continue">Please login again to continue</string>
+    <string name="fetching_keys">Fetching keys, please wait&#8230;</string>
 </resources>
