--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -524,4 +524,5 @@
     <string name="no_prv_keys_ask_admin">There are no private keys configured for you. Please ask your systems administrator or help desk</string>
     <string name="please_login_again_to_continue">Please login again to continue</string>
     <string name="fetching_keys">Fetching keys, please wait&#8230;</string>
+    <string name="found_not_fully_decrypted_key_ask_admin">Error. Key %1$s is not fully decrypted. Please ask your systems administrator or help desk</string>
 </resources>
