--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -388,7 +388,6 @@
     <string name="could_not_load_private_keys">Couldn\'t load private keys</string>
     <string name="internal_node_init_error">Internal Node initializing error</string>
     <string name="error_loader_result_is_empty">Error. The loader result is empty</string>
-    <string name="could_not_load_domain_rules">Couldn\'t load domain rules</string>
     <string name="could_not_import_data">Could\'t import data</string>
     <string name="partially_encrypted_private_key_error_msg">One of the provided Private Keys is a partially encrypted private key (some packets are encrypted, some not). Such keys are not supported. Please only import fully encrypted keys, with the same pass phrase for all secret packets.</string>
     <string name="file_is_too_big">The file is too big</string>
@@ -517,7 +516,14 @@
         <item quantity="one">Please provide a pass phrase for the following key</item>
         <item quantity="other">Please provide a pass phrase for the following keys</item>
     </plurals>
+    <string name="combination_of_org_rules_is_not_supported">Combination of the following OrgRules\n\n%1$s\n\nis not supported</string>
     <string name="passphrase_was_changed">Your pass phrase was changed. From now, the new backups will be protected with a provided pass phrase.</string>
     <string name="processing_please_wait">Processing, please wait&#8230;</string>
     <string name="could_not_change_pass_phrase">Could not change the pass phrase</string>
+    <string name="no_prv_keys_ask_admin">There are no private keys configured for you. Please ask your systems administrator or help desk</string>
+    <string name="please_login_again_to_continue">Please login again to continue</string>
+    <string name="fetching_keys">Fetching keys, please wait&#8230;</string>
+    <string name="found_not_fully_decrypted_key_ask_admin">Error. Key %1$s is not fully decrypted. Please ask your systems administrator or help desk</string>
+    <string name="found_not_fully_encrypted_key">Error. Key %1$s is not fully encrypted</string>
+    <string name="could_not_parse_one_of_ekm_key">Couldn\'t parse one of the keys received from EKM</string>
 </resources>
