--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -496,8 +496,8 @@
     <string name="date">Date</string>
     <string name="to_receiver">To %1$s</string>
     <string name="and_others">and others&#8230;</string>
-    <string name="store_pass_phrase_locally">Store pass phrase locally</string>
-    <string name="keep_pass_phrase_in_memory">Keep pass phrase in memory</string>
+    <string name="save_pass_phrase">Save pass phrase</string>
+    <string name="remember_pass_phrase_temporarily">Remember pass phrase temporarily</string>
     <string name="pass_phrase_not_provided">Pass phrase is not provided</string>
     <string name="forget_passphrase">Forget pass phrase</string>
     <string name="check_passphrase">Check pass phrase</string>
