--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -544,4 +544,5 @@
     <string name="could_not_update_pub_key_for_recipient">Couldn\'t update a public key for %1$s</string>
     <string name="pub_keys">Public keys</string>
     <string name="recipient_detail">Recipient details</string>
+    <string name="you_trying_replace_pub_key_with_older_version">You are trying to replace a public key with an older version</string>
 </resources>
