--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -542,4 +542,5 @@
     <string name="pub_keys">Public keys</string>
     <string name="recipient_detail">Recipient details</string>
     <string name="you_trying_replace_pub_key_with_older_version">You are trying to replace a public key with an older version</string>
+    <string name="not_usable_for_encryption">Warning: not usable for encryption</string>
 </resources>
