Fixed key has no suitable encryption subkeys.| #1590 (#1594)
* Fixed key has no suitable encryption subkeys.| #1590

* Refactored code.| #1590

* Updated docker-mailserver to 0.0.13.| #1590

* Fixed a bug in KeyRingInfo.usableForEncryption(). Added a test to MessageDetailsActivityTest.| #1590

* Fixed JUnit tests.| #1590

--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -542,4 +542,5 @@
     <string name="pub_keys">Public keys</string>
     <string name="recipient_detail">Recipient details</string>
     <string name="you_trying_replace_pub_key_with_older_version">You are trying to replace a public key with an older version</string>
+    <string name="cannot_be_used_for_encryption">Warning: cannot be used for encryption</string>
 </resources>
