--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -543,4 +543,6 @@
     <string name="recipient_detail">Recipient details</string>
     <string name="you_trying_replace_pub_key_with_older_version">You are trying to replace a public key with an older version</string>
     <string name="cannot_be_used_for_encryption">Warning: cannot be used for encryption</string>
+    <string name="warning_about_manual_import">Manually importing Public Keys received over email can be dangerous.
+      Contact the sender to verify that the fingerprint matches.</string>
 </resources>
